refactor: fix KaKaoSocialLogin and record API documentation
